--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
-    <title>Document</title>
+    <title>Redes Sociais</title>
 </head>
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                Seu navegador não é compatível com isso.
+            </iframe>
 
         </section>
 
